<resources>
    <string name="app_name">LoginUI</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="sign_up">회원 가입</string>
    <string name="email">이메일</string>
    <string name="cancel">취소</string>
    <string name="ok">가입</string>
    <string name="role">role</string>
</resources>