<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="4dp"
                android:text="@string/id" />


            <EditText
                android:id="@+id/id_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginLeft="20dp"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/id"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="4dp"
                android:text="@string/pw" />


            <EditText
                android:id="@+id/pw_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/pw"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="4dp"
                android:text="@string/name" />


            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/name"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:inputType="text"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="4dp"
                android:text="@string/email" />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginLeft="20dp"
                android:inputType="textEmailAddress"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/email"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="#494949"
                android:layout_marginBottom="4dp"
                android:text="@string/age" />


            <EditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="4dp"
                android:text="@string/role" />


            <EditText
                android:id="@+id/role_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/role"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:inputType="text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp" >
                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="130dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/login_btn_bg"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="100dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/signUp_btn"
                    android:layout_width="130dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/login_btn_bg"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:layout_marginBottom="100dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>